<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CuisinesActivity">

    <Button
        android:id="@+id/button2"
        android:layout_width="172dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="38dp"
        android:layout_marginEnd="147dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="481dp"
        android:onClick="goBack"
        android:text="@string/str_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="141dp"
        android:layout_height="140dp"
        android:layout_marginBottom="242dp"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="99dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="102dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToFoodActivity"
            android:text="@string/str_american"
            tools:layout_editor_absoluteX="38dp"
            tools:layout_editor_absoluteY="247dp" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_italian"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="201dp"
            android:onClick="goToFoodActivity" />

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goToFoodActivity"
            android:text="@string/str_international"
            tools:layout_editor_absoluteX="39dp"
            tools:layout_editor_absoluteY="159dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginEnd="97dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="37dp"
        android:text="Select Cuisine"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>